--- a/frontend/src/conpornents/TestMain.css
+++ b/frontend/src/conpornents/TestMain.css
@@ -20,9 +20,24 @@
 
 }
 
+#answer_area{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    gap: 10px;
+
+
+}
 #answer {
     width:200px;
     height: 100px;
+    line-height: 100px;
+    text-align: center;
     font-size: 300%;
     background-color: beige;
+}
+
+#answer_buttons{
+    display: flex;
+gap: 10px;
 }
