add; paramNew arg

--- a/frontend/src/conpornents/TestNavbar.css
+++ b/frontend/src/conpornents/TestNavbar.css
@@ -3,5 +3,5 @@
     height: 100px;
     display: flex;
     flex-direction: row;
-    background-color: lightskyblue;
+    background-color: #b4e0fb;
 }
