--- a/frontend/src/conpornents/NewQ.css
+++ b/frontend/src/conpornents/NewQ.css
@@ -1,5 +1,17 @@
 .radio {
-    height:30px; width:30px; background:white; border:2px solid #efefef; cursor:pointer; float:left; margin-right:10px; border-radius:50%; position:relative;
+    height:20px; width:20px; background:white; border:2px solid #efefef; cursor:pointer; float:left; margin-right:10px; border-radius:50%; position:relative;
     &:after { content:''; position:absolute; top:5px; left:5px; height:20px; width:20px; background:#3498db; border-radius:50%; transform:scale(0); transition:all 0.1s; visible:hidden; }
     &.checked:after { transform:scale(1); visible:visible; }
 }
+
+header{
+    background-color:slategray ;
+    color: white;
+}
+
+
+
+.set_button{
+    width:150px;
+    height: 50px;
+font-size: 140%}
