--- a/frontend/src/conpornents/TestNavbar.css
+++ b/frontend/src/conpornents/TestNavbar.css
@@ -1,7 +1,7 @@
-#test_nav_bar {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    flex-direction: row;
-    background-color: #b4e0fb;
-}
+/*#test_nav_bar {*/
+/*    width: 100%;*/
+/*    height: 100px;*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    background-color: #b4e0fb;*/
+/*}*/
