--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,6 +36,11 @@ h1 {
 }
 
 button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
@@ -53,7 +58,11 @@ button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
 }
-
+header{
+    background-color:slategray ;
+height: 100px;
+    color: white;
+}
 /*@media (prefers-color-scheme: light) {*/
 /*  :root {*/
 /*    color: #213547;*/
