--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,10 +30,10 @@
 /*min-height: 100vh;*/
 /*}*/
 
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
-}
+/*h1 {*/
+/*    font-size: 3.2em;*/
+/*    line-height: 1.1;*/
+/*}*/
 
 button {
     display: flex;
@@ -63,6 +63,12 @@ header{
 height: 100px;
     color: white;
 }
+
+.header_title{
+    font-size: 300%;
+    line-height: 1.1
+}
+
 /*@media (prefers-color-scheme: light) {*/
 /*  :root {*/
 /*    color: #213547;*/
