--- a/frontend/src/conpornents/NewQ.css
+++ b/frontend/src/conpornents/NewQ.css
@@ -1,8 +1,8 @@
-.radio {
-    height:20px; width:20px; background:white; border:2px solid #efefef; cursor:pointer; float:left; margin-right:10px; border-radius:50%; position:relative;
-    &:after { content:''; position:absolute; top:5px; left:5px; height:20px; width:20px; background:#3498db; border-radius:50%; transform:scale(0); transition:all 0.1s; visible:hidden; }
-    &.checked:after { transform:scale(1); visible:visible; }
-}
+/*.radio {*/
+/*    height:20px; width:20px; background:white; border:2px solid #efefef; cursor:pointer; float:left; margin-right:10px; border-radius:50%; position:relative;*/
+/*    &:after { content:''; position:absolute; top:5px; left:5px; height:20px; width:20px; background:#3498db; border-radius:50%; transform:scale(0); transition:all 0.1s; }*/
+/*    &.checked:after { transform:scale(1); }*/
+/*}*/
 
 header{
     background-color:slategray ;
@@ -15,3 +15,19 @@ header{
     width:150px;
     height: 50px;
 font-size: 140%}
+
+#radio_area {
+
+ display: flex;
+    flex-direction:column;
+
+    background-color: #e1e0e0;
+margin-bottom: 20px;
+}
+#radio_title{
+font-size: 200%;
+}
+#radio_class{
+    font-size: 150%;
+    padding: 20px;
+}
