add; res_conponent

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,17 @@
+
+#top_button{
+    display: flex;
+    flex-flow: row;
+    gap:20px;
+    padding: 10px;
+
+}
+
+#welcome{ font-size: 140%;
+
+ }
+
+
 /*header{*/
 /*    background-color:slategray ;*/
 /*    color: white;*/
