--- a/frontend/src/conpornents/TestNavbar.css
+++ b/frontend/src/conpornents/TestNavbar.css
@@ -6,12 +6,12 @@
 /*    background-color: #b4e0fb;*/
 /*}*/
 
-#test_nav_bar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
+/*#test_nav_bar {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    justify-content: space-between;*/
+/*    align-items: center;*/
+/*}*/
 
 #middle{
     display: flex;
@@ -27,8 +27,4 @@
 .middle_children{
     background-color: beige;
 }
-#option{
-    display: flex;
-    flex-flow: column;
-    justify-content: space-between;
-    font-size: 140%}
+
