--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,14 +60,26 @@ button:focus-visible {
 }
 header{
     background-color:slategray ;
-height: 100px;
+    height: 100px;
     color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header_title{
     font-size: 300%;
-    line-height: 1.1
+    line-height: 1.1;
+
+
 }
+
+.option{
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    font-size: 140%}
 
 /*@media (prefers-color-scheme: light) {*/
 /*  :root {*/
