--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,12 +66,12 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .header_title{
     font-size: 300%;
     line-height: 1.1;
-
 
 }
 
@@ -79,8 +79,15 @@ header{
     display: flex;
     flex-flow: column;
     justify-content: space-between;
-    font-size: 140%}
+    text-align: right;
+    font-size: 140%;
+    padding-right: 15px;
+}
 
+.pull{
+    font-size: 200%;
+    background-color: lightpink;
+}
 /*@media (prefers-color-scheme: light) {*/
 /*  :root {*/
 /*    color: #213547;*/
