--- a/frontend/src/conpornents/ParamSelect.css
+++ b/frontend/src/conpornents/ParamSelect.css
@@ -1,9 +1,14 @@
 #param_display{
     font-size: 140%;
-    background-color: beige;
+    /*background-color: beige;*/
     width: 500px;
-padding: 15px;
+    padding: 15px;
     margin: 10px;
+    height: 200px;
+    align-self: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
 }
 
 #pull_text_param{font-size: 130%}
