--- a/frontend/src/conpornents/NewQ.css
+++ b/frontend/src/conpornents/NewQ.css
@@ -4,14 +4,17 @@
 /*    &.checked:after { transform:scale(1); }*/
 /*}*/
 
-header{
-    background-color:slategray ;
-    color: white;
+/*header{*/
+/*    background-color:slategray ;*/
+/*    color: white;*/
+/*}*/
+
+
+#main{
+    padding-left: 30px;
+    width: 600px;
 }
-
-
-
-.set_button{
+.k-set_button{
     width:150px;
     height: 50px;
 font-size: 140%}
@@ -20,14 +23,36 @@ font-size: 140%}
 
  display: flex;
     flex-direction:column;
+    background-color: #fde5e9;
 
-    background-color: #e1e0e0;
+    /*background-color: #e1e0e0;*/
 margin-bottom: 20px;
+    margin-top: 20px;
+    border-radius: 1em;
+   padding: 10px;
+
+    /*width: 550px;*/
 }
 #radio_title{
 font-size: 200%;
 }
 #radio_class{
+    display: flex;
+    flex-flow: row;
     font-size: 150%;
     padding: 20px;
+    gap:30px;
+
+
+}
+
+.param_select{
+    background: pink;
+    font-size: 80%;
+
+}
+
+.param_btn_area{
+    font-size: 150%;
+    align-self: self-end;
 }
