--- a/frontend/src/conpornents/ParamNew.css
+++ b/frontend/src/conpornents/ParamNew.css
@@ -2,13 +2,18 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    background-color: #d6d6d6;
+    border-radius: 1em;
+    padding: 10px;
+
 }
 
 .operation_each{
-    background-color: #b4e0fb;
-    width:550px;
+    background-color: #f3f3f3;
+    /*width:550px;*/
     height: 130px;
-    padding-left: 10px;
+    padding-left: 20px;
+    border-radius: 1em;
 }
 
 .operation_title_row{
