--- a/frontend/src/conpornents/TestMain.css
+++ b/frontend/src/conpornents/TestMain.css
@@ -7,11 +7,18 @@
     flex-direction: row;
     justify-content:space-around;
 
-    background-color: beige;
+    /*background-color: beige;*/
     width:700px;
 
     border-radius: 0.2em;
 }
+
+#question_area{
+    background-color:  #fde5e9;
+    border-radius: 1em;
+    padding: 15px;
+}
+
 
 #q_no {
     font-size: 200%;
@@ -21,7 +28,7 @@
     display: flex;
     margin-top: 10px;
     justify-content:space-around;
-    width:700px
+    /*width:700px*/
 
 }
 
@@ -59,6 +66,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#end_comment{
+    font-size: 200%;
+padding-bottom: 20px;
+    padding-left: 20px;
+}
+
+#end_area{
+    padding-top: 20px;
+    padding-left: 20px;
+
+
+}
+
+#end_button {
+    font-size: 300%;
 }
 
 /*.k-answer{*/
