--- a/frontend/src/conpornents/TestNavbar.css
+++ b/frontend/src/conpornents/TestNavbar.css
@@ -18,10 +18,11 @@
     flex-flow: row;
     gap: 50px;
     font-size: 130%;
-    width: 900px;
+    width: 700px;
     height: 50px;
     color: mediumvioletred;
     align-items: center;
+justify-content: center;
 }
 
 /*.middle_children{*/
@@ -31,6 +32,6 @@
 #info{
     display: flex;
     flex-flow: row;
-    background-color: beige;
+    /*background-color: beige;*/
     margin-bottom: 30px;
 }
