--- a/frontend/src/conpornents/TestMain.css
+++ b/frontend/src/conpornents/TestMain.css
@@ -76,9 +76,14 @@
     padding-left: 20px;
 }
 
-.end_area{
+#end_area{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
     padding-top: 40px;
     padding-left: 20px;
+    height: 200px;
 
 
 }
@@ -86,11 +91,20 @@
 .end_button {
     font-size: 300%;
     margin-bottom: 20px;
-    width:500px
+    width:500px;
+
+
+}
+#end_comment{
+    font-size: 150%;
+}
+
+.end_button{
+    background-color: #ffd993;
 }
 
 img {
-    width: 300px;
+    height: 300px;
 }
 /*.k-answer{*/
 /*    height: 50px;*/
